--- a/src/components/contact/contact.module.scss
+++ b/src/components/contact/contact.module.scss
@@ -34,7 +34,6 @@
         .introduceTopCover {
             width: 100%;
             height: 140px;
-            position: relative;
             padding-top: 35px;
             justify-content: start;
 
@@ -45,18 +44,19 @@
                     margin-bottom: unset;
                     font-weight: bold;
                     text-transform: uppercase;
-                }
-            }
+                    position: relative;
 
-            .introduceLine {
-                content: "";
-                width: 250px;
-                height: 6px;
-                background: linear-gradient(to right, #00894f 60%, #8dc63f 40%);
-                position: absolute;
-                transform: translate(-50%, 50%);
-                top: 80%;
-                left: 8.5%;
+                    &::after {
+                        content: "";
+                        width: 215px;
+                        height: 6px;
+                        background: linear-gradient(to right, #00894f 60%, #8dc63f 40%);
+                        position: absolute;
+                        transform: translate(-50%, 50%);
+                        top: 110%;
+                        left: 50%;
+                    }
+                }
             }
         }
 
@@ -197,17 +197,151 @@
     background-size: cover;
     width: 100%;
     height: 768px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     padding: 0 50px;
 
     .aboutOurService {
+        display: flex;
+        flex-direction: column;
+        height: 768px;
+        align-items: start;
+        justify-content: center;
+
         h1 {
             font-size: 40px;
             color: #fff;
             text-transform: uppercase;
             margin-bottom: unset;
+        }
+
+        .btn_see_more {
+            margin-top: 30px;
+
+            button {
+                background-color: #8dc63f;
+                width: 158px;
+                height: 35px;
+                border-radius: 20px;
+                justify-content: space-around;
+                cursor: pointer;
+
+                p {
+                    font-size: 16px;
+                    font-weight: bold;
+                    margin-bottom: unset !important;
+                }
+
+                .iconBtn {
+                    font-size: 18px;
+                }
+            }
+        }
+    }
+
+    .aboutOurMap {
+        display: flex;
+        align-items: center;
+        height: 768px;
+    }
+}
+
+.customerInformation {
+    background-image: url(/images/customer_information/customer_imformation.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 845px;
+
+    .customerInformationCover {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding-top: 40px;
+
+        .customerInformationTop {
+            .customerInformationTopCover {
+                .customerInformationTitle {
+                    width: 700px;
+                    text-align: center;
+
+                    h1 {
+                        color: #fff;
+                        font-size: 45px;
+                        margin-bottom: unset;
+                        font-weight: bold;
+                        text-transform: uppercase;
+                        position: relative;
+
+                        &::after {
+                            content: "";
+                            width: 280px;
+                            height: 6px;
+                            background: linear-gradient(to right, #00894f 50%, rgb(255, 255, 255) 50%);
+                            position: absolute;
+                            transform: translate(-50%, 50%);
+                            top: 110%;
+                            left: 50%;
+                        }
+                    }
+                }
+            }
+        }
+
+        .customerInformationCenter {
+            margin-top: 40px;
+
+            p {
+                margin-bottom: unset;
+                font-size: 18px;
+            }
+        }
+
+        .customerInformationBottom {
+            margin: 30px 0;
+            flex-direction: column;
+            gap: 20px;
+
+            input {
+                width: 55rem;
+                height: 50px;
+                background-color: #fff;
+                padding: 10px 20px;
+                font-size: 18px;
+                color: #00894F;
+            }
+
+            textarea {
+                width: 55rem;
+                background-color: #fff;
+                padding: 10px 20px;
+                font-size: 18px;
+                color: #000;
+            }
+
+            .btn_see_more {
+                margin-top: 3rem;
+
+                button {
+                    background: linear-gradient(to right, #8dc63f, #00894f);
+                    width: 225px;
+                    height: 35px;
+                    border-radius: 20px;
+                    justify-content: space-around;
+                    cursor: pointer;
+
+                    p {
+                        font-size: 16px;
+                        font-weight: bold;
+                        text-transform: uppercase;
+                        margin-bottom: unset !important;
+                    }
+
+                    .iconBtn {
+                        font-size: 18px;
+                    }
+                }
+            }
         }
     }
 }
