--- a/src/components/beverage-packaging-design/beverage-packaging-design.module.scss
+++ b/src/components/beverage-packaging-design/beverage-packaging-design.module.scss
@@ -19,7 +19,6 @@
     .introduceTopCover {
         width: 100%;
         height: 140px;
-        position: relative;
         padding-top: 35px;
         justify-content: start;
 
@@ -30,18 +29,19 @@
                 margin-bottom: unset;
                 font-weight: bold;
                 text-transform: uppercase;
-            }
-        }
+                position: relative;
 
-        .introduceLine {
-            content: "";
-            width: 250px;
-            height: 6px;
-            background: linear-gradient(to right, #00894f 60%, #8dc63f 40%);
-            position: absolute;
-            transform: translate(-50%, 50%);
-            top: 80%;
-            left: 8.5%;
+                &::after {
+                    content: "";
+                    width: 250px;
+                    height: 6px;
+                    background: linear-gradient(to right, #00894f 60%, #8dc63f 40%);
+                    position: absolute;
+                    transform: translate(-50%, -50%);
+                    top: 110%;
+                    left: 50%;
+                }
+            }
         }
     }
 
@@ -59,7 +59,6 @@
     .introducePackagingDesignerTopCover {
         width: 100%;
         height: 100px;
-        position: relative;
         padding-top: 35px;
         align-items: flex-start;
 
@@ -70,18 +69,19 @@
                 margin-bottom: unset;
                 font-weight: bold;
                 text-transform: uppercase;
-            }
-        }
+                position: relative;
 
-        .introducePackagingDesignerLine {
-            content: "";
-            width: 170px;
-            height: 6px;
-            background: linear-gradient(to right, #00894f 60%, #8dc63f 40%);
-            position: absolute;
-            transform: translate(-50%, 50%);
-            top: 70%;
-            left: 50%;
+                &::after {
+                    content: "";
+                    width: 170px;
+                    height: 6px;
+                    background: linear-gradient(to right, #00894f 60%, #8dc63f 40%);
+                    position: absolute;
+                    transform: translate(-50%, -50%);
+                    top: 110%;
+                    left: 50%;
+                }
+            }
         }
     }
 
@@ -154,7 +154,6 @@
     .affiliateProductTopCover {
         width: 100%;
         height: 140px;
-        position: relative;
         padding-top: 35px;
         justify-content: start;
 
@@ -165,25 +164,26 @@
                 margin-bottom: unset;
                 font-weight: bold;
                 text-transform: uppercase;
-            }
-        }
+                position: relative;
 
-        .affiliateProductLine {
-            content: "";
-            width: 250px;
-            height: 6px;
-            background: linear-gradient(to right, #00894f 60%, #8dc63f 40%);
-            position: absolute;
-            transform: translate(-50%, 50%);
-            top: 80%;
-            left: 8.5%;
+                &::after {
+                    content: "";
+                    width: 250px;
+                    height: 6px;
+                    background: linear-gradient(to right, #00894f 60%, #8dc63f 40%);
+                    position: absolute;
+                    transform: translate(-50%, -50%);
+                    top: 110%;
+                    left: 33%;
+                }
+            }
         }
     }
 }
 
 .carouselProductBackground {
     margin-top: 10px;
-    
+
     .productCarousel {
         padding: 0 20px 0 20px;
 
@@ -232,8 +232,6 @@
         .whyChooseUsTop {
 
             .whyChooseUsTopCover {
-                position: relative;
-
                 .whyChooseUsTitle {
                     width: 700px;
                     text-align: center;
@@ -244,18 +242,19 @@
                         margin-bottom: unset;
                         font-weight: bold;
                         text-transform: uppercase;
-                    }
-                }
+                        position: relative;
 
-                .whyChooseUsLine {
-                    content: "";
-                    width: 280px;
-                    height: 6px;
-                    background: linear-gradient(to right, #00894f 50%, #8dc63f 50%);
-                    position: absolute;
-                    transform: translate(-50%, 50%);
-                    top: 105%;
-                    left: 50%;
+                        &::after {
+                            content: "";
+                            width: 280px;
+                            height: 6px;
+                            background: linear-gradient(to right, #00894f 50%, #8dc63f 50%);
+                            position: absolute;
+                            transform: translate(-50%, -50%);
+                            top: 110%;
+                            left: 50%;
+                        }
+                    }
                 }
             }
         }
@@ -293,6 +292,108 @@
                         color: #8dc63f;
                         text-align: center;
                         width: 310px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.customerInformation {
+    background-image: url(/images/customer_information/customer_imformation.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 845px;
+
+    .customerInformationCover {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding-top: 40px;
+
+        .customerInformationTop {
+            .customerInformationTopCover {
+                .customerInformationTitle {
+                    width: 700px;
+                    text-align: center;
+
+                    h1 {
+                        color: #fff;
+                        font-size: 45px;
+                        margin-bottom: unset;
+                        font-weight: bold;
+                        text-transform: uppercase;
+                        position: relative;
+
+                        &::after {
+                            content: "";
+                            width: 280px;
+                            height: 6px;
+                            background: linear-gradient(to right, #00894f 50%, rgb(255, 255, 255) 50%);
+                            position: absolute;
+                            transform: translate(-50%, 50%);
+                            top: 110%;
+                            left: 50%;
+                        }
+                    }
+                }
+            }
+        }
+
+        .customerInformationCenter {
+            margin-top: 40px;
+
+            p {
+                margin-bottom: unset;
+                font-size: 18px;
+            }
+        }
+
+        .customerInformationBottom {
+            margin: 30px 0;
+            flex-direction: column;
+            gap: 20px;
+
+            input {
+                width: 55rem;
+                height: 50px;
+                background-color: #fff;
+                padding: 10px 20px;
+                font-size: 18px;
+                color: #00894F;
+            }
+
+            textarea {
+                width: 55rem;
+                background-color: #fff;
+                padding: 10px 20px;
+                font-size: 18px;
+                color: #000;
+            }
+
+            .btn_see_more {
+                margin-top: 3rem;
+
+                button {
+                    background: linear-gradient(to right, #8dc63f, #00894f);
+                    width: 220px;
+                    height: 35px;
+                    border-radius: 20px;
+                    justify-content: space-around;
+                    cursor: pointer;
+
+                    p {
+                        font-size: 16px;
+                        font-weight: bold;
+                        text-transform: uppercase;
+                        margin-bottom: unset !important;
+                    }
+
+                    .iconBtn {
+                        font-size: 18px;
                     }
                 }
             }
