--- a/src/components/products/product-detail/products-detail.module.scss
+++ b/src/components/products/product-detail/products-detail.module.scss
@@ -70,34 +70,128 @@
                 color: #000;
             }
         }
-
-        .requestBtn {
-            button {
-                background: #8dc63f;
-            }
-        }
     }
 
     .productElementRight {
         background-color: #00894f;
-        height: 600px;
+        height: 836px;
         border-radius: 20px;
         flex-direction: column;
         justify-content: flex-start;
 
         .productElementTitle {
+            margin-top: 25px;
+
             h3 {
                 color: #fff;
-                font-size: 18px;
+                font-size: 30px;
                 text-transform: uppercase;
+            }
+        }
+
+        .productLinkImg {
+            margin-top: 10px;
+
+            .mediaLink {
+                width: 42px;
+                height: 42px;
+                margin-right: 15px;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+
+                &:last-child {
+                    margin-right: unset;
+                }
+            }
+        }
+
+        .productStars {
+            margin-top: 20px;
+
+            .productStarsIcon {
+                font-size: 24px;
+                color: yellow;
+                margin-right: 6px;
+
+                &:last-child {
+                    margin-right: unset;
+                }
+            }
+        }
+
+        .productElementTable {
+            margin-top: 30px;
+            width: 100%;
+            padding: 0 80px;
+
+            .productElementContent {
+                justify-content: space-between;
+            }
+        }
+
+        .productElementNote {
+            flex-direction: column;
+            margin-top: 20px;
+
+            p {
+                margin-bottom: 6px;
+            }
+        }
+
+        .productElementBottomContent {
+            flex-direction: column;
+            margin-top: 20px;
+            align-items: self-start;
+            width: 100%;
+            padding: 0 80px;
+
+            p {
+                font-size: 16px;
             }
         }
     }
 
+    .requestBtn {
+        button {
+            background: #8dc63f;
+            width: 278px;
+            height: 35px;
+            border-radius: 20px;
+            cursor: pointer;
+
+            p {
+                margin-bottom: unset;
+                font-size: 16px;
+                text-transform: uppercase;
+            }
+
+            .iconButton {
+                font-size: 18px;
+                margin-right: 10px;
+            }
+        }
+    }
 }
 
 .productDescription {
     margin: 0 80px;
+
+    h1 {
+        color: #00894F;
+        font-size: 30px;
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: bold;
+    }
+
+    p {
+        font-size: 16px;
+        color: #606060;
+        text-align: center;
+    }
 }
 
 .affiliateProduct {
